Update author ORCIDs and add new software entry in bibliography

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -99,3 +99,25 @@
   adsurl  = {https://rdcu.be/b08Wh},
   doi     = {10.1038/s41592-019-0686-2},
 }
+
+@software{dunstan_2025_15720184,
+  author       = {Dunstan, Joel and
+                  Barry, Nichole and
+                  Line, Jack},
+  title        = {PyFHD: Python Fast Holographic Deconvolution, an
+                   open source Python package for Fast-Mode EoR
+                   analysis
+                  },
+  month        = jun,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {1.0.1},
+  doi          = {10.5281/zenodo.15720184},
+  url          = {https://doi.org/10.5281/zenodo.15720184},
+  swhid        = {swh:1:dir:96348083dd744d3fb420f7b6b2a8582b4790e652
+                   ;origin=https://doi.org/10.5281/zenodo.15720183;vi
+                   sit=swh:1:snp:6591c49ec7b833b260f2710c16c9026f0f41
+                   6290;anchor=swh:1:rel:327238de3cc227324af28eab2f06
+                   4e5c33cb5b9a;path=PyFHD-1.0.1
+                  },
+}
